navbar fixed & applied to all pages

--- a/public/rules.html
+++ b/public/rules.html
@@ -17,27 +17,27 @@
   <!--Questrial font -->
   <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
   <!--css -->
-  <link href="css/hall-of-fame.css" type="text/css" rel="stylesheet">
+  <link href="css/rules.css" type="text/css" rel="stylesheet">
 
-	<title>The CIL Hall of Fame</title>
+	<title>CIL History</title>
 </head>
 <body style="background-color: black;">
-  <nav class="navbar navbar-inverse">
-    <div class="container" id="navbar-container">
-        <div class="container-fluid">
-          <div class="navbar-header">
-              <a class="navbar-brand" href="#">
-                <img alt="The CIL" src="images/bannerpng.png" id="navpic">
-              </a>
-              <ul class="nav nav-pills" id="navpills">
-                <li><a href="#" id="navhistory">History</a></li>
-                <li><a href="#" id="navcoaches">Coaches</a></li>
-                <li><a href="#" id="navhof">Hall-of-Fame</a></li>
-                <li><a href="#" id="navrules">Rules</a></li>
-              </ul>
-        </div>
-      </div>
-  </nav>
+	<nav class="navbar navbar-inverse">
+ 		<div class="container" id="navbar-container">
+    		<div class="container-fluid">
+   				<div class="navbar-header">
+      				<a class="navbar-brand" href="#">
+        				<img alt="The CIL" src="images/bannerpng.png" id="navpic">
+      				</a>
+      				<ul class="nav nav-pills" id="navpills">
+      					<li><a href="#" id="navhistory">History</a></li>
+      					<li><a href="#" id="navcoaches">Coaches</a></li>
+      					<li><a href="#" id="navhof">Hall-of-Fame</a></li>
+      					<li><a href="#" id="navrules">Rules</a></li>
+      				</ul>
+    		</div>
+  		</div>
+	</nav>
 
 </body>
 </html>
