--- a/public/history.html
+++ b/public/history.html
@@ -9,9 +9,35 @@
 
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<!--fontawesome cdn -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!--Russo One font -->
+	<link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+	<!--Questrial font -->
+	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	<!--css -->
+	<link href="css/history.css" type="text/css" rel="stylesheet">
+
 	<title>CIL History</title>
 </head>
-<body>
+<body style="background-color: black;">
+	<nav class="navbar navbar-inverse">
+ 		<div class="container" id="navbar-container">
+    		<div class="container-fluid">
+   				<div class="navbar-header">
+      				<a class="navbar-brand" href="#">
+        				<img alt="The CIL" src="images/bannerpng.png" id="navpic">
+      				</a>
+      				<ul class="nav nav-pills" id="navpills">
+      					<li><a href="#" id="navhistory">History</a></li>
+      					<li><a href="#" id="navcoaches">Coaches</a></li>
+      					<li><a href="#" id="navhof">Hall-of-Fame</a></li>
+      					<li><a href="#" id="navrules">Rules</a></li>
+      				</ul>
+    		</div>
+  		</div>
+	</nav>
 
 </body>
 </html>
