--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
 
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<!--fontawesome cdn -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--Russo One font -->
 	<link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
-	<!--Khula font -->
-	<link href="https://fonts.googleapis.com/css?family=Khula" rel="stylesheet">
+	<!--Questrial font -->
+	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 	<!--css -->
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 
@@ -20,40 +23,63 @@
 </head>
 <body style="background-color: black;">
 	<nav class="navbar navbar-inverse">
- 		<div class="container">
+ 		<div class="container" id="navbar-container">
     		<div class="container-fluid">
    				<div class="navbar-header">
       				<a class="navbar-brand" href="#">
-        				<img alt="The CIL" src="images/logo2018.jpg" style="max-width: 10%;">
+        				<img alt="The CIL" src="images/bannerpng.png" id="navpic">
       				</a>
-      				<ul class="nav nav-pills">
-      					<li><a href="#">History</a></li>
-      					<li><a href="#">Coaches</a></li>
-      					<li><a href="#">Hall-of-Fame</a></li>
+      				<ul class="nav nav-pills" id="navpills">
+      					<li><a href="#" id="navhistory">History</a></li>
+      					<li><a href="#" id="navcoaches">Coaches</a></li>
+      					<li><a href="#" id="navhof">Hall-of-Fame</a></li>
+      					<li><a href="#" id="navrules">Rules</a></li>
       				</ul>
     		</div>
   		</div>
 	</nav>
-	
-	<h1 style="text-align: center; font-family: 'Russo One', sans-serif; color: #006c93;">
-		The Home of the CIL
-	</h1>
-
-	<div class="well well-lg" style="margin-left: 20%; margin-right: 20%; font-family: 'Khula', sans-serif;"> The Casualness Intensifies League, or the CIL is a competitive singles, draft-style Pokemon league with a unique, casual approach.  Don't get it twisted--coaches in the CIL play and prep at a very high level and often win other leagues in which they compete.  The laid-back feel comes from an honest approach and love of the game that draws in coaches who want to have fun, learn, and play the game to be the very best, like no one ever was.</div>
-
 </br>
 </br>
 </br>
-
-	<div class="well well-lg" style="margin-left: 20%; margin-right: 20%; font-family: 'Khula', sans-serif;">  Hi, I'm Kevin, the Kevmissioner of the CIL, and creator of this website; I wanted to thank you for stopping by, but before you go, make sure you give us a follow on Twitter to keep up with news, scores, and the puncraft of whatever wordplay wizard runs the Twitter account.  If you're interested in joining, that's where all of our communication takes place so head on over and say hello.  Looking forward to it!
-		<a class="btn btn-social-icon btn-twitter" href="https://twitter.com/CIL_Official">
-   			<span class="fa fa-twitter"></span>
-  		</a>
+	<div class="container">
+		<img alt="CIL Banner 2018" src="images/banner2018.jpg" style="max-width: 100%; text-align: center;">
+	</br>
+	</br>
+		<div class="row">
+			<h1 style="text-align: center; font-family: 'Russo One', sans-serif; color: #2de2f3; font-size: 48pt;">
+				Experience the CIL
+			</h1>
+		</div>
+		<div class="row" id="intro-row">
+			<div style="margin-left: 20%; margin-right: 20%; font-family: 'Questrial', sans-serif; color: white;"> 
+				Welcome to the CIL, the Casualness Intensifies League.  We are a competitive singles, draft-style Pokemon league with a unique, casual approach.  Don't get it twisted--coaches in the CIL play and prep at a very high level and often win other leagues in which they compete, but we welcome players of all experience-levels as long as they have a good attitude and willingness to learn.  The laid-back feel comes from an honest approach and love of the game that draws in coaches who want to have fun, learn, and play the game to be the very best, like no one ever was.  Explore the site for battle results, rosters, coach profiles and more that will take your intensity to the next level.
+			</div>
+		</div>
+	<hr>
+		<div class="row">
+			<div class="col-xs-6" id="twitter-link-box">
+  				<div class="panel-body">
+				    Check us out on Twitter
+				</div>
+				<a href="https://twitter.com/CIL_Official">
+					<img src="images/twitter.png" id="twitter-icon">
+				</a>
+			</div>
+			<div class="col-xs-6" id="google-sheets-box">
+  				<div class="panel-body">
+					This season's Google Doc
+				</div>
+				<a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=0">
+					<img src="images/google-sheets.png" id="google-sheets-icon">
+				</a>
+			</div>
+		</div>
 	</div>
-
-
 </body>
+</br>
+</br>
+</br>
 <footer>
-	© Kevin Corso and The CIL 2015 - 2018
+	© Kevin Corso, Chase Branham, and The CIL 2015 - 2018
 </footer>
 </html>
