coaches index completed

--- a/public/coaches.html
+++ b/public/coaches.html
@@ -39,10 +39,130 @@
   		</div>
 	</nav>
 	
+	<div class="container">
+		<div class="row">
+			<h1> Coaches</h1>
+			<p> Meet the competitors of the CIL!  Click on the coach's name to visit their Twitter page, or click on their team name for their bio and team information!
+		</div>
+		<div class="row" id="current-coaches">
+			<h2>Current Coaches</h2>
+			<table>
+				<tr>
+					<th> Coach </th>
+					<th> Team </th>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/KevinVGC"> KevinVGC </a></td>
+					<td> Los Angeles Kinglers </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/CBran15"> Chase </a> </td>
+					<td> Bentonville Blastoise </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Mav_Intensifies"> Mav Intensifies </a></td>
+					<td> Sarnia Poison Sting </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/theflyingfiona"> Fiona </a></td>
+					<td> Kansas City Whirlwinds </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Sanyer1124"> Dakota </a></td>
+					<td> Portland Pinsirs </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/mattyb410"> MysticMatt </a></td>
+					<td> Manchester Mattmonlees </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/MadMikeNebbia"> Michael Nebbia</a></td>
+					<td> Hartford Wailord </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Samakonda"> Sam </a></td>
+					<td> Los Angeles Sand Veil Dodgers</td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Kiev697"> Black117 </a></td>
+					<td> Los Angeles Nidokings</td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/ItalianG062"> Kyle </a></td>
+					<td> Cobbleskill Charizards</td>
+				</tr>
+			</table>
+		</div>
 
+		<div class="row" id="past-coaches">
+			<h2>Former Coaches</h2>
+			<table>
+				<tr>
+					<th> Coach </th>
+					<th> Team </th>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/KantoCast"> KantoCast </a></td>
+					<td> Tapu Koko Puffs </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Lowercase_de"> Craig de Aragón</a></td>
+					<td> Colorado Rapidash </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Satoshi_Red_Ash"> Marvin </a></td>
+					<td> Pittsburgh Empoleons </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/MightyMamoswine"> MightyMamoswine </a> </td>
+					<td> Washington Blazikens </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/ItsSlec"> Alec </a> </td>
+					<td> Indianapolis Coltbalions </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/GatorJonah"> ICEolate </a></td>
+					<td> Denver Decidueyes </td>
+				</tr>
+				<tr>
+					<td><a href="https://twitter.com/hankthepidgey">Hank // HTP </a></td>
+					<td> Winnipeg Aqua Jets </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/OhHiTony"> Ghostface Kirillia </a> </td>
+					<td> Lake Superior Surf </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Rachelwithcats">Rachel With Cats </a> </td>
+					<td> Phoenix Solgaleos </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/EdkrazeOfficial"> Edkraze </a> </td>
+					<td> Kentucky Combusken </td>
+				</tr>
+				<tr>
+					<td> Director DRB </td>
+					<td> D-Generation Hex </td>
+				</tr>
+				<tr>
+					<td> <a href="https://twitter.com/Mr_murkrow"> Murk </td>
+					<td> Los Angeles Burger Kinglers </td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
 </body>
 <footer style="text-align: center; font-family: 'Khula', sans-serif;">
 	© Kevin Corso and The CIL 2015 - 2018
 </footer>
 </html>
+
+<!--coach question ideas & submissions:
+	1- fav pokemon to draft?
+	2- playstyle?
+	3- if you could change one pokemon to make it better, what would you change & how would you change it?
+	4- who your favorite starter pokemon?
+	5- non pokemon hobbies?
+	-->
