coaches page, interview template est

--- a/public/coaches.html
+++ b/public/coaches.html
@@ -160,9 +160,15 @@
 </html>
 
 <!--coach question ideas & submissions:
-	1- fav pokemon to draft?
-	2- playstyle?
-	3- if you could change one pokemon to make it better, what would you change & how would you change it?
-	4- who your favorite starter pokemon?
-	5- non pokemon hobbies?
+
+	1- How would you describe your playstyle?	
+	2- What's your favorite Pokemon to draft?
+	3- If you chould change one Pokemon to improve its utility, what would you change and how?
+	4- Who is your favorite starter Pokemon?
+	5- Aside from trainer, what job would you have in the Pokemon universe?
+	6- Where would you live in the Pokemon universe?
+	7- Do you follow any well-known Pokemon players?
+	8- When you're not playing Pokemon, what are we likely to find you doing?
+	9-
+	10- 
 	-->
