--- a/public/coach-template.html
+++ b/public/coach-template.html
@@ -26,7 +26,7 @@
 	<!--css -->
 	<link href="css/coaches.css" type="text/css" rel="stylesheet">
 
-	<title>Mad Mike Nebbia</title>
+	<title>Coach</title>
 </head>
 <body style="background-color: black;">
 	<nav class="navbar navbar-inverse">
@@ -48,8 +48,8 @@
 
 	<div class="container">
 		<div class="row">
-			<h1> Meet the Real Mike Madness</h1>
-			<h5> Brooklyn Net Balls, Hartford Wailord, Oklahoma City Thundurus </h5>
+			<h1> Meet the Coach (Nickname)</h1>
+			<h5> Team(s) </h5>
 		</div>
 		<div class="row" style="margin-bottom: 24pt;">
 			<h2> Seasons </h2>
@@ -62,17 +62,11 @@
 			</table>
 		<div class="row" style="text-align: center;">
 			<a href="https://twitter.com/MadMikeNebbia">
-				<img src="images/coachpics/mikepic.jpg" id="coachpic">
+				<img src="images/coachpics/missingnopic.jpg" id="coachpic">
 			</a>
 		</div>
 		<h2> From the Coach's Desk </h2>
-		<p>I got into competitive Pokemon by watching videos of guys like aDrive and MegaMogwai. I thought to myself 'this might be fun', so I stumbled upon the CIL and I've loved every minute of it! 
-		</br>
-		</br>
-		My play style...I guess it's mainly hyper offense with weather playing a role this season.
-		</br>
-		</br>
-		After each game, I like to look at the replays, see what went wrong and what I can improve on for the next battle.
+		<p>	
 		</p>
 	</div>
 
