--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<!--css -->
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 
+
 	<title>The CIL</title>
 </head>
 <body style="background-color: black;">
@@ -26,14 +27,14 @@
  		<div class="container" id="navbar-container">
     		<div class="container-fluid">
    				<div class="navbar-header">
-      				<a class="navbar-brand" href="#">
+      				<a class="navbar-brand" href="index.html">
         				<img alt="The CIL" src="images/bannerpng.png" id="navpic">
       				</a>
       				<ul class="nav nav-pills" id="navpills">
-      					<li><a href="#" id="navhistory">History</a></li>
-      					<li><a href="#" id="navcoaches">Coaches</a></li>
-      					<li><a href="#" id="navhof">Hall-of-Fame</a></li>
-      					<li><a href="#" id="navrules">Rules</a></li>
+      					<li><a href="history.html" id="navhistory" class="transition">History</a></li>
+      					<li><a href="coaches.html" id="navcoaches" class="transition">Coaches</a></li>
+      					<li><a href="hall-of-fame.html" id="navhof" class="transition">Hall-of-Fame</a></li>
+      					<li><a href="rules.html" id="navrules" class="transition">Rules</a></li>
       				</ul>
     		</div>
   		</div>
@@ -61,7 +62,7 @@
   				<div class="panel-body">
 				    Check us out on Twitter
 				</div>
-				<a href="https://twitter.com/CIL_Official">
+				<a href="https://twitter.com/CIL_Official" class="transition">
 					<img src="images/twitter.png" id="twitter-icon">
 				</a>
 			</div>
@@ -69,16 +70,20 @@
   				<div class="panel-body">
 					This season's Google Doc
 				</div>
-				<a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=0">
+				<a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=0" class="transition">
 					<img src="images/google-sheets.png" id="google-sheets-icon">
 				</a>
 			</div>
 		</div>
 	</div>
+
+
+	<script type="text/javascript" src="/js/myscripts.js"></script>
 </body>
 </br>
 </br>
 </br>
+
 <footer>
 	© Kevin Corso, Chase Branham, and The CIL 2015 - 2018
 </footer>
