coach template linked, history page completed

--- a/public/coaches.html
+++ b/public/coaches.html
@@ -49,11 +49,11 @@
 			<table>
 				<tr>
 					<th> Coach </th>
-					<th> Team </th>
+					<th> Team(s) </th>
 				</tr>
 				<tr>
 					<td> <a href="Kevin.html"> KevinVGC </a></td>
-					<td> Los Angeles Kinglers </td>
+					<td> Los Angeles Kinglers, Los Angeles Reshirams </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/CBran15"> Chase </a> </td>
@@ -64,31 +64,31 @@
 					<td> Sarnia Poison Sting </td>
 				</tr>
 				<tr>
-					<td> Fiona </td>
-					<td> Kansas City Whirlwinds </td>
+					<td><a href="coach-template.html"> Fiona </a></td>
+					<td> Kansas City Whirlwinds, Kansas City T-Flames </td>
 				</tr>
 				<tr>
-					<td> Dakota </td>
-					<td> Portland Pinsirs </td>
+					<td><a href="coach-template.html"> Dakota </a></td>
+					<td> Portland Pinsirs, Seattle SuperScizors </td>
 				</tr>
 				<tr>
-					<td> MysticMatt</td>
-					<td> Manchester Mattmonlees </td>
+					<td> (Anonymous) </td>
+					<td> Manchester Mattmonlees, Super Saiyan Snorlax's, Philadelphia Pheromosas </td>
 				</tr>
 				<tr>
-					<td> Michael Nebbia</td>
-					<td> Hartford Wailord </td>
+					<td><a href="coach-template.html"> Michael Nebbia </a></td>
+					<td> Hartford Wailord, Oklahoma City Thundurus, Brooklyn Net Balls </td>
 				</tr>
 				<tr>
-					<td> Sam</td>
-					<td> Los Angeles Sand Veil Dodgers</td>
+					<td><a href="coach-template.html"> Sam</a></td>
+					<td> Los Angeles Sand Veil Dodgers, Los Angeles Sampharos</td>
 				</tr>
 				<tr>
-					<td> Black117</td>
+					<td><a href="coach-template.html"> Black117 </a></td>
 					<td> Los Angeles Nidokings</td>
 				</tr>
 				<tr>
-					<td> Kyle </td>
+					<td><a href="coach-template.html"> Kyle </a></td>
 					<td> Cobbleskill Charizards</td>
 				</tr>
 			</table>
@@ -99,11 +99,11 @@
 			<table>
 				<tr>
 					<th> Coach </th>
-					<th> Team </th>
+					<th> Team(s) </th>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/KantoCast"> KantoCast </a></td>
-					<td> Tapu Koko Puffs </td>
+					<td> Tapu Koko Puffs, Wilmington Wynauts </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/Lowercase_de"> Craig de Aragón</a></td>
@@ -111,7 +111,7 @@
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/Satoshi_Red_Ash"> Marvin </a></td>
-					<td> Pittsburgh Empoleons </td>
+					<td> Pittsburgh Empoleons, Gengar Knights, Night Shades </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/MightyMamoswine"> MightyMamoswine </a> </td>
@@ -119,11 +119,11 @@
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/ItsSlec"> Alec </a> </td>
-					<td> Indianapolis Coltbalions </td>
+					<td> Indianapolis Coltbalions, Indianapolis Jolts </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/GatorJonah"> ICEolate </a></td>
-					<td> Denver Decidueyes </td>
+					<td> Denver Decidueyes, Bolt Strike Bisharps </td>
 				</tr>
 				<tr>
 					<td><a href="https://twitter.com/hankthepidgey">Hank // HTP </a></td>
@@ -143,7 +143,7 @@
 				</tr>
 				<tr>
 					<td> Director DRB </td>
-					<td> D-Generation Hex </td>
+					<td> D-Generation Hex, Houndooms </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/Mr_murkrow"> Murk </td>
