--- a/public/coach-template.html
+++ b/public/coach-template.html
@@ -48,30 +48,29 @@
 
 	<div class="container">
 		<div class="row">
-			<h1> Meet the Coach (Nickname)</h1>
-			<h5> Team(s) </h5>
+			<h1> Meet the Coach</h1>
+			<h5> Team Name</h5>
 		</div>
 		<div class="row" style="margin-bottom: 24pt;">
 			<h2> Seasons </h2>
 			<table id="seasons-table">
 				<th> 1 </th>
-				<th style="color: black; background-color:#2de2f3;"> 2 </th>
-				<th style="color: black; background-color:#2de2f3;"> 3 </th>
-				<th style="color: black; background-color:#2de2f3;"> 4 </th>
-				<th style="color: black; background-color:#2de2f3;"> 5 </th>
+				<th> 2 </th>
+				<th> 3 </th>
+				<th> 4 </th>
+				<th> 5 </th>
 			</table>
 		<div class="row" style="text-align: center;">
-			<a href="https://twitter.com/MadMikeNebbia">
 				<img src="images/coachpics/missingnopic.jpg" id="coachpic">
-			</a>
 		</div>
 		<h2> From the Coach's Desk </h2>
 		<p>	
+			Yo! This actually coach hasn't done their bio yet or anything! What a slacker, right? Tell them to get it together!
 		</p>
 	</div>
 
 	<!-- Button triggering coach interview modal -->
-<button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" id="coach-interview-btn">Coach's Interview!</button>
+<!-- <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" id="coach-interview-btn">Coach's Interview!</button>
 
 <div class="modal fade" id="myModal">
   <div class="modal-dialog">
@@ -175,10 +174,10 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-info" data-dismiss="modal" id="modal-close-btn">Close</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+      </div> -->
+<!--</div> --><!-- /.modal-content -->
+<!--</div> --><!-- /.modal-dialog -->
+<!--</div> --><!-- /.modal -->
 		
 
 <!--SCRIPTS -->
