--- a/public/history.html
+++ b/public/history.html
@@ -44,75 +44,35 @@
 		<h1> CIL Archives</h1>
 	</div>
 	<div class="row">
-		<h3> If you're looking for the Google Docs for all past seasons, look no further.  This is the complete history of the CIL.</h3>
-	</div>
-	<div class="row">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		    <li data-target="#myCarousel" data-slide-to="1"></li>
-		    <li data-target="#myCarousel" data-slide-to="2"></li>
-		    <li data-target="#myCarousel" data-slide-to="3"></li>
-		    <li data-target="#myCarousel" data-slide-to="4"></li>
-		  </ol>
-
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		      <img src="images/logo2018.jpg" alt="Season 5">
-		      <div class="carousel-caption">
-		        <h3>Season 5</h3>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="images/logos2-4.jpg" alt="Season 4">
-		      <div class="carousel-caption">
-		        <h3>Season 4: RU</h3>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="images/logos2-4.jpg" alt="Season 3">
-		      <div class="carousel-caption">
-		        <h3>Season 3</h3>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="images/logos2-4.jpg" alt="Season 2">
-		      <div class="carousel-caption">
-		        <h3>Season 2</h3>
-		      </div>
-		    </div>
-		    
-		  	<div class="item">
-		      <img src="images/logos1.jpg"" alt="Season 1">
-		      <div class="carousel-caption">
-		        <h3>Season 1</h3>
-		      </div>
-		    </div>
-
-		  </div>
-
-
-
-		  <!-- Left and right controls -->
-		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
+		<h3> If you're looking for the Google Docs for all past seasons, look no further.  This is your gateway to the complete history of the CIL.</h3>
 	</div>
 
-</div>
-
-
+	<table>
+		<tr>
+			<th> Season </th>
+			<th> Google Sheet </th>
+		</tr>
+		<tr>
+			<td> Season 5</td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=184483042"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>	
+		<tr>
+			<td> Season 4 (RU) </td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1N2TNmLsl7ZNetMr3rdK8WAbFiAALuqtEex2rxJOtRBE/edit?ts=59d01f66#gid=0"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>
+		<tr>
+			<td> Season 3</td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1fBYfHjci03wDhRoIgqMRup3qovRa9CgNJePjwaU_5Hs/edit#gid=0"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>
+		<tr>
+			<td> Season 2</td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1qEn0NPsiLOvXfdwqxXrvm1mldd5Y0mgiHO0Hvrx_2UE/edit#gid=0"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>
+		<tr>
+			<td> Season 1</td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1uPtcs-jbIbOQG5ycq5Cabjayp_-EiEYmwBmBxjpFKZc/edit#gid=0"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>		
+	</table>
 <!--SCRIPTS -->
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
@@ -134,18 +94,6 @@
 		          window.location = linkLocation;
 		      }
 		  });
-		// Activate Carousel
-	$("#myCarousel").carousel();
-
-	// Enable Carousel Indicators
-	$(".item").click(function(){
-	    $("#myCarousel").carousel(1);
-	});
-
-	// Enable Carousel Controls
-	$(".left").click(function(){
-	    $("#myCarousel").carousel("prev");
-	});
 
 </script>
 
