--- a/public/hall-of-fame.html
+++ b/public/hall-of-fame.html
@@ -39,7 +39,17 @@
       </div>
   </nav>
 
-
+<div class="container">
+  <div class="row">
+    <h1> The CIL Hall-of-Fame </h1>
+  </div>
+  <div class="row">
+    <h3> This floor is the CIL Hall-of-Fame!  CIL champions are honored for their exploits here!  Their Pokemon are also recorded in the Hall-of-Fame! </h3>
+  </div>
+  <div class="row">
+    <p> Still working on this page though! Check back soon :] </p>
+  </div>
+</div>
 
 <!--SCRIPTS -->
 <script
