current/former coaches updated

--- a/public/coaches.html
+++ b/public/coaches.html
@@ -52,10 +52,6 @@
 					<th> Team(s) </th>
 				</tr>
 				<tr>
-					<td> <a href="Kevin.html"> KevinVGC </a></td>
-					<td> Los Angeles Kinglers, Los Angeles Reshirams </td>
-				</tr>
-				<tr>
 					<td> <a href="https://twitter.com/CBran15"> Chase </a> </td>
 					<td> Bentonville Blastoise </td>
 				</tr>
@@ -84,12 +80,24 @@
 					<td> Los Angeles Sand Veil Dodgers, Los Angeles Sampharos</td>
 				</tr>
 				<tr>
-					<td><a href="coach-template.html"> Black117 </a></td>
-					<td> Los Angeles Nidokings</td>
-				</tr>
-				<tr>
 					<td><a href="coach-template.html"> Kyle </a></td>
 					<td> Cobbleskill Charizards</td>
+				</tr>
+				<tr>
+					<td> <a href="coach-template.html"> Marvin </a></td>
+					<td> Pittsburgh Empoleons, Gengar Knights, Night Shades </td>
+				</tr>
+				<tr>
+					<td><a href="coach-template.html"> JakeFromPeoria </a></td>
+					<td> Peoria Richard Pyroars</td>
+				</tr>
+				<tr>
+					<td><a href="coach-template.html"> UB: Aberration </a></td>
+					<td> Texas Tauros</td>
+				</tr>
+				<tr>
+					<td><a href="coach-template.html"> Mr_Niceguy430 </a></td>
+					<td> Snowpoint Glaceons</td>
 				</tr>
 			</table>
 		</div>
@@ -102,16 +110,20 @@
 					<th> Team(s) </th>
 				</tr>
 				<tr>
+					<td> <a href="Kevin.html"> KevinVGC </a></td>
+					<td> Los Angeles Kinglers, Los Angeles Reshirams </td>
+				</tr>
+				<tr>
+					<td><a href="coach-template.html"> Black117 </a></td>
+					<td> Los Angeles Nidokings</td>
+				</tr>
+				<tr>
 					<td> <a href="https://twitter.com/KantoCast"> KantoCast </a></td>
 					<td> Tapu Koko Puffs, Wilmington Wynauts </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/Lowercase_de"> Craig de Aragón</a></td>
 					<td> Colorado Rapidash </td>
-				</tr>
-				<tr>
-					<td> <a href="https://twitter.com/Satoshi_Red_Ash"> Marvin </a></td>
-					<td> Pittsburgh Empoleons, Gengar Knights, Night Shades </td>
 				</tr>
 				<tr>
 					<td> <a href="https://twitter.com/MightyMamoswine"> MightyMamoswine </a> </td>
