doc link on index updated

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
   				<div class="panel-body">
 					This season's Google Doc
 				</div>
-				<a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=0" class="transition">
+				<a href="https://docs.google.com/spreadsheets/u/2/d/1bT6CMa60zylhzQt3gl2KVp2yPBM_DlQA1aRcF9t0MoQ/edit?ouid=110530159618095936666&usp=sheets_home&ths=true">
 					<img src="images/google-sheets.png" id="google-sheets-icon">
 				</a>
 			</div>
