s6 added to archives/history

--- a/public/history.html
+++ b/public/history.html
@@ -53,6 +53,10 @@
 			<th> Google Sheet </th>
 		</tr>
 		<tr>
+			<td> Season 6</td>
+			<td> <a href="https://docs.google.com/spreadsheets/d/1bT6CMa60zylhzQt3gl2KVp2yPBM_DlQA1aRcF9t0MoQ/edit#gid=287234862"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
+		</tr>	
+		<tr>
 			<td> Season 5</td>
 			<td> <a href="https://docs.google.com/spreadsheets/d/1TD43w3IqmBzgHGwFC4WNmjFvtiXVTs_q6TtG-LY75hw/edit#gid=184483042"><img src="images/google-sheets.png" id="google-sheets-icon"> </a></td>
 		</tr>	
