--- a/public/coaches.html
+++ b/public/coaches.html
@@ -72,7 +72,7 @@
 					<td> Manchester Mattmonlees, Super Saiyan Snorlax's, Philadelphia Pheromosas </td>
 				</tr>
 				<tr>
-					<td><a href="coach-template.html"> Michael Nebbia </a></td>
+					<td><a href="Mike.html"> Michael Nebbia </a></td>
 					<td> Hartford Wailord, Oklahoma City Thundurus, Brooklyn Net Balls </td>
 				</tr>
 				<tr>
