coach template season count added

--- a/public/coach-template.html
+++ b/public/coach-template.html
@@ -59,13 +59,14 @@
 				<th> 3 </th>
 				<th> 4 </th>
 				<th> 5 </th>
+				<th> 6 </th>
 			</table>
 		<div class="row" style="text-align: center;">
 				<img src="images/coachpics/missingnopic.jpg" id="coachpic">
 		</div>
 		<h2> From the Coach's Desk </h2>
 		<p>	
-			Yo! This actually coach hasn't done their bio yet or anything! What a slacker, right? Tell them to get it together!
+			Yo... This actually coach hasn't done their bio yet or anything! What a slacker, right? Tell them to get it together!
 		</p>
 	</div>
 
